--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         font-family: "Montserrat Subrayada", sans-serif;
         font-weight: 700;
         font-style: normal;
-        margin-bottom: 7rem;
         color: #000;
         &:before {
             content: "";
@@ -49,7 +48,8 @@
     <div class="d-flex flex-column justify-content-center align-content-center h-100 w-100">
         <p class="text-center">渋谷のカクテルバー</p>
         <h1 class="text-center">NEIGHBAR</h1>
-        <div class="d-flex justify-content-center">
+        <p class="text-center">3/15 OPEN予定</p>
+        <div class="d-flex justify-content-center mt-5">
             <a href="https://www.youtube.com/@NEIGHBARBASE" class="link"><i class="fa-brands fa-youtube"></i></a>
             <a href="https://www.instagram.com/neighbar_official/" class="link"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.tiktok.com/@openbar_after30daysman" class="link"><i class="fa-brands fa-tiktok"></i></a>
