--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             background: crimson;
         }
     }
+    h2 {
+        text-align: center;
+        font-family: "Montserrat Subrayada", sans-serif;
+        font-weight: 700;
+        font-style: normal;
+    }
     .link {
         font-size: 3rem;
         margin: 0 0.5em;
@@ -46,7 +52,7 @@
 </head>
 <body class="h-100 w-100">
     <div class="d-flex flex-column justify-content-center align-content-center h-100 w-100">
-        <p class="text-center">渋谷のカクテルバー</p>
+        <p class="text-center">代々木八幡のカクテルバー</p>
         <h1 class="text-center">NEIGHBAR</h1>
         <p class="text-center">3/15 OPEN予定</p>
         <div class="d-flex justify-content-center mt-5">
@@ -57,20 +63,20 @@
         </div>
     </div>
     <div class="container mb-5">
-        <table class="table  table-borderless text-white">
-            <thead>
-              <tr>
-                <th class="text-right" style="width: 35%;" scope="col">店舗名</th>
-                <td>NEIGHBAR</td>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th class="text-right" scope="row">住所</th>
-                <td>〒151-0063 東京都渋谷区富ケ谷１丁目２−１４ 池田ビル２F</td>
-              </tr>
-            </tbody>
-          </table>
+        <h2>MENU</h2>
+        <p class="text-center">coming soon</p>
+    </div>
+    <div class="container mb-5">
+        <h2>PROFILE</h2>
+        <p class="text-center">3月15日、地元の代々木八幡にバーをオープン予定。<br>
+            中学1年まで地元で過ごし、中学2年から地方にある寮制の中高一貫校へ転校する。<br>
+            卒業/進学と共に都内へ戻り、アルバイト時代から都内の有名店でバーテンダーとしての下積みを始める。<br>
+            カクテルの世界に身を置いて●年で、系列▲店舗の集まる社内の〇〇コンペにて準優勝。<br>
+            この出来事から自身のお店を持つ夢を意識しはじめる。</p>
+    </div>
+    <div class="container mb-5">
+        <h2>INFOMATION</h2>
+        <p class="text-center"><strong class="mr-3">住所</strong> 〒151-0063 東京都渋谷区富ケ谷１丁目２−１４</p>
     </div>
     <div class="container mb-5">
         <p class="text-center">&copy; NEIGHBAR</p>
