プロフィール

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         font-weight: 700;
         font-style: normal;
     }
+    .scroll {
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translateX(-50%);
+    }
     .link {
         font-size: 3rem;
         margin: 0 0.5em;
@@ -61,24 +67,26 @@
             <a href="https://www.tiktok.com/@openbar_after30daysman" class="link"><i class="fa-brands fa-tiktok"></i></a>
             <a href="https://lin.ee/G8uYgY8" class="link"><i class="fa-brands fa-line"></i></a>
         </div>
+        <p class="scroll">↓ scroll</p>
     </div>
-    <div class="container mb-5">
+    <div class="container mt-5">
         <h2>MENU</h2>
         <p class="text-center">coming soon</p>
     </div>
-    <div class="container mb-5">
+    <div class="container mt-5">
         <h2>PROFILE</h2>
-        <p class="text-center">3月15日、地元の代々木八幡にバーをオープン予定。<br>
-            中学1年まで地元で過ごし、中学2年から地方にある寮制の中高一貫校へ転校する。<br>
+        <div class="text-center my-3"><img class="rounded-circle" src="./profile.jpg" alt=""></div>
+        <p class="text-center">幼少期に地元で過ごし、中学生から地方にある寮制の中高一貫校へ転校する。<br>
+            そこで人との関わりを持つことに興味を持ち将来的に人と関わる仕事をしたいと思い始める。<br>
             卒業/進学と共に都内へ戻り、アルバイト時代から都内の有名店でバーテンダーとしての下積みを始める。<br>
-            カクテルの世界に身を置いて●年で、系列▲店舗の集まる社内の〇〇コンペにて準優勝。<br>
+            カクテルの世界に身を置いて僅か年で、系列20店舗以上の集まる社内コンペのバーテンダー部門にて準優勝。<br>
             この出来事から自身のお店を持つ夢を意識しはじめる。</p>
     </div>
-    <div class="container mb-5">
+    <div class="container mt-5">
         <h2>INFOMATION</h2>
         <p class="text-center"><strong class="mr-3">住所</strong> 〒151-0063 東京都渋谷区富ケ谷１丁目２−１４</p>
     </div>
-    <div class="container mb-5">
+    <div class="container my-5">
         <p class="text-center">&copy; NEIGHBAR</p>
     </div>
 </body>
