--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
     <div class="container mt-5">
         <h2>PROFILE</h2>
         <div class="text-center my-3"><img class="rounded-circle" src="./profile.jpg" alt=""></div>
-        <p class="text-center">幼少期に地元で過ごし、中学生から地方にある寮制の中高一貫校へ転校する。<br>
+        <div class="d-flex justify-content-center"><p>幼少期に地元で過ごし、中学生から地方にある寮制の中高一貫校へ転校する。<br>
             そこで人との関わりを持つことに興味を持ち将来的に人と関わる仕事をしたいと思い始める。<br>
             卒業/進学と共に都内へ戻り、アルバイト時代から都内の有名店でバーテンダーとしての下積みを始める。<br>
             カクテルの世界に身を置いて僅か年で、系列20店舗以上の集まる社内コンペのバーテンダー部門にて準優勝。<br>
-            この出来事から自身のお店を持つ夢を意識しはじめる。</p>
+            この出来事から自身のお店を持つ夢を意識しはじめる。</p></div>
     </div>
     <div class="container mt-5">
-        <h2>INFOMATION</h2>
+        <h2>ADDRESS</h2>
         <p class="text-center"><strong class="mr-3">住所</strong> 〒151-0063 東京都渋谷区富ケ谷１丁目２−１４</p>
     </div>
     <div class="container my-5">
