--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <div class="container mt-5">
         <h2>ADDRESS</h2>
         <p class="text-center"><strong class="mr-3">住所</strong> 〒151-0063 東京都渋谷区富ケ谷１丁目２−１４</p>
+        <p class="text-center"><strong class="mr-3">電話</strong> 05054826045</p>
     </div>
     <div class="container my-5">
         <p class="text-center">&copy; NEIGHBAR</p>
